@@ -85,6 +85,12 @@
       <version>3.4.3</version> <!-- {x-version-update;io.projectreactor:reactor-test;external_dependency} -->
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>javax.json</groupId>
+      <artifactId>javax.json-api</artifactId>
+      <version>1.1.4</version>  <!-- {x-version-update;javax.json:javax.json-api;external_dependency} -->
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
@@ -117,6 +123,7 @@
             <configuration>
               <argLine>
                 --add-opens com.azure.core.experimental/com.azure.core.experimental.geojson=ALL-UNNAMED
+                --add-opens com.azure.core.experimental/com.azure.core.experimental.http=ALL-UNNAMED
                 --add-opens com.azure.core.experimental/com.azure.core.experimental.jsonpatch=ALL-UNNAMED
               </argLine>
             </configuration>
